--- a/index.html
+++ b/index.html
@@ -11,28 +11,39 @@
         <h1>Rock Paper Scissors</h1>
     </nav>
     <main class="main-content">
-        <h2 class="content-title">Prepare for Battle!</h2>
-        <h3 class="subtitle">Score 5 points to win!</h3>
+        <h2 class="content-title" id="content-title">Prepare for Battle!</h2>
+        <h3 class="subtitle" id="subtitle">Score 5 points to win!</h3>
         <div class="game-field">
             <div class="selection font-big">
                 <div class="image-selection">
-                    <img src="" alt="Player Selection">
-                    <div class="score" id="player">Player: 0</div>
+                    <span class="action-selected" id="playerChoice">?</span>
+                    <p class="score" id="playerScore">Player: 0</p>
                 </div>
                 <div class="image-selection">
-                    <img src="" alt="Computer Selection">
-                    <div class="score" id="computer">Computer: 0</div>
+                    <span class="action-selected" id="computerChoice">?</span>
+                    <p class="score" id="computerScore">Computer: 0</p>
                 </div>
             </div>
             <div class="action-choices">
-                <div class="choice" id="rock" value="Rock"></div>
-                <div class="choice" id="paper" value="Paper"></div>
-                <div class="choice" id="scissors" value="Scissors"></div>
+                <button class="choice" id="rockButton" onclick="game('ROCK');">
+                    <span>✊</span>
+                </button>
+                <button class="choice" id="paperButton">
+                    <span>✋</span>
+                </button>
+                <button class="choice" id="scissorsButton">
+                    <span>✌</span>
+                </button>
             </div>
         </div>
     </main>
     <footer class="footer center-text">
-        Copyright &copy; Rad Roa 2023
+        <p>
+            Copyright &copy; Rad Roa 
+            <script>
+                document.write(new Date().getFullYear())
+            </script>
+        </p>
     </footer>
 </body>
 <script src="./js/javascript.js"></script>
