Complete functions, fixed bugs

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
                 <button class="choice" id="rockButton" onclick="game('ROCK');">
                     <span>✊</span>
                 </button>
-                <button class="choice" id="paperButton">
+                <button class="choice" id="paperButton" onclick="game('PAPER');">
                     <span>✋</span>
                 </button>
-                <button class="choice" id="scissorsButton">
+                <button class="choice" id="scissorsButton" onclick="game('SCISSORS')">
                     <span>✌</span>
+                </button>
+                <button class="choice" id="restartButton" onclick="restart()">
+                    <span>↻</span>
                 </button>
             </div>
         </div>
